# stainx

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN_PLANS.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml  test.yml
benchmarks/: benchmark_backends.py  benchmark_simple.py  benchmark_slideflow.py  benchmark_stainx.py  benchmark_stainx_backend.py  benchmark_torchstain.py  logger.py  plot_bars.py  run_stainx.py  utils.py
csrc/: histogram_matching.cu  macenko.cu  reinhard.cu
docs/: benchmarks.md  changelog.md  examples.md  index.md  installation.md  quickstart.md
docs/api/: backends.md  base.md  histogram_matching.md  index.md  macenko.md  reinhard.md
examples/: simple_example.py  torch_transform_example.py
src/stainx/: __init__.py  api.py  base.py  utils.py
src/stainx/backends/: __init__.py  cuda_backend.py  cupy_backend.py  cupy_cuda_backend.py  torch_backend.py  torch_cuda_backend.py
src/stainx/normalizer/: __init__.py  histogram_matching.py
src/stainx/normalizers/: __init__.py  _template.py  histogram_matching.py  macenko.py  reinhard.py  vahadane.py
src/stainx_cuda/: __init__.py
src/stainx_cuda/csrc/: bindings.cpp  histogram_matching.cu  macenko.cu  reinhard.cu  vahadane.cu
src/stainx_cuda_cupy/: __init__.py
src/stainx_cuda_cupy/csrc/: bindings.cpp  histogram_matching.cu  macenko.cu  reinhard.cu
src/stainx_cuda_torch/: __init__.py
src/stainx_cuda_torch/csrc/: bindings.cpp  histogram_matching.cu  macenko.cu  reinhard.cu
tests/: conftest.py  test_correctness.py  test_correctness_cupy.py  test_cuda_correctness.py  test_cuda_correctness_cupy.py  test_initialization.py  test_initialization_cupy.py  test_normalizers.py
tests/cupy_cuda_interface/: test_cuda_backend_parity_against_cupy.py  test_cupy_cuda_backend_not_implemented.py
tests/cupy_interface/: test_correctness_against_references.py
tests/torch_cuda_interface/: test_cuda_backend_parity_against_torch.py
tests/torch_interface/: test_correctness_against_references.py
