[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch>=2.0.0",
    "ninja",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "stainx"
version = "0.0.20"
description = "Enhanced stain normalization for histopathology images with batch processing support. Optimized for CPU, GPU (CUDA), and MPS (Apple Silicon) devices."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
]
authors = [
    { name = "Yimin Zheng", email = "yzheng@cemm.oeaw.ac.at"},
    { name = "Samir Moustafa", email = "smoustafa@cemm.oeaw.ac.at"}
]
license = "GPL-3.0-or-later"
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]

[project.optional-dependencies]
cupy = [
    "cupy-cuda12x>=12.0.0; platform_machine != 'arm64'",
    "cupy>=12.0.0; platform_machine == 'arm64'",
]

[tool.setuptools.package-data]
stainx_cuda_torch = ["csrc/*.cpp", "csrc/*.cu", "csrc/*.h", "csrc/*.hpp", "csrc/*.cuh"]
stainx_cuda_cupy = ["csrc/*.cpp", "csrc/*.cu", "csrc/*.h", "csrc/*.hpp", "csrc/*.cuh"]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.24.0",
    "taskipy>=1.14.1",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "torchstain>=1.4.1",
    "scikit-image>=0.21.0",
    "prettytable>=3.0.0",
    "torchvision>=0.15.0",
    "ruff>=0.1.0",
    "ninja>=1.10.0",
    "pybind11>=2.10.0",
    "cupy-cuda12x>=12.0.0; platform_machine != 'arm64'",
    "cupy>=12.0.0; platform_machine == 'arm64'",
    "scipy>=1.14.1; python_version>='3.13'",  # Python 3.13 requires scipy 1.14.1+ for pre-built wheels
    "scipy>=1.12.0,<1.13.0; python_version<'3.13'",  # Match benchmark group constraint for older Python versions
]
# Benchmark dependencies require Python 3.12 due to imgui compatibility
# Use: uv sync --group benchmark --python 3.12
benchmark = [
    "prettytable",
    "slideflow<3.0.0",
    "cucim",
    "torchvision",
    "llvmlite>=0.45.0",
    "numba>=0.60.0",
    "umap-learn>=0.5.9",
    "torchstain @ git+https://github.com/EIDOSLAB/torchstain.git@development",
    "scikit-image",
    "matplotlib",
    "numpy<2.0.0",  # Constrain numpy for pandas 1.5.3 compatibility (from slideflow<3.0.0)
    "scipy>=1.14.1; python_version>='3.13'",  # Python 3.13 requires scipy 1.14.1+ for wheels
    "scipy<1.13.0; python_version<'3.13'",  # Constrain scipy for lifelines compatibility (trapz was removed in 1.13.0)
]

[tool.uv]
# Benchmark dependencies require Python 3.12 due to imgui==2.0.0 compatibility
# When syncing benchmarks, use: uv sync --group benchmark --python 3.12

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/stainx",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "cuda: marks tests that require CUDA",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "benchmarks/logs",
    "stain-normalization-gpu",  # Separate project directory
]

# Increased line length to allow merging of longer expressions
line-length = 320
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "T201",  # print statements (may be intentional in some contexts)
    "N806",  # Variable in function should be lowercase (scientific notation like L, A, B, N, C, H, W are common)
    "N803",  # Argument name should be lowercase (scientific notation is common)
    "COM812",  # trailing comma enforcement (prevents formatter from collapsing statements)
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Enable import sorting
known-first-party = ["stainx"]
# Disable split on trailing comma to be compatible with skip-magic-trailing-comma=true
split-on-trailing-comma = false

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"
# Indent with spaces, rather than tabs.
indent-style = "space"
# Skip magic trailing commas to allow more aggressive collapsing
skip-magic-trailing-comma = true
# Automatically detect the appropriate line ending.
line-ending = "auto"
# Enable preview mode for more aggressive line merging
preview = true
